[package]
name = "spipes"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.12.6"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

[build-dependencies]
tonic-build = "0.11.0"
